# voip-rs

./: Cargo.toml  README.md
csip/: Cargo.toml
csip-sdp/: Cargo.toml
csip-sdp/src/: parser.rs  sdp.rs
csip/src/: lib.rs
csip/src/endpoint/: builder.rs  mod.rs
csip/src/parser/: mod.rs
csip/src/transaction/: server.rs
csip/src/transport/: outgoing.rs
csip/src/ua/: mod.rs  session.rs
examples/: Cargo.toml  sipstateless.rs  uas.rs
utils/: Cargo.toml
utils/src/: byte.rs  lib.rs  local_ip.rs  lookup.rs  lookup_table.rs  one.rs  peek_recv.rs  resolver.rs  scanner.rs
voip/: Cargo.toml
voip-rs/: Cargo.toml
voip-rs-sdp/: Cargo.toml
voip-rs-sdp/src/: error.rs  lib.rs  parser.rs  sdp.rs
voip-rs-sip/: Cargo.toml
voip-rs-sip/src/: lib.rs  macros.rs  test_utils.rs
voip-rs-sip/src/endpoint/: builder.rs  mod.rs
voip-rs-sip/src/message/: code.rs  mod.rs  param.rs  uri.rs
voip-rs-sip/src/message/headers/: accept.rs  accept_encoding.rs  accept_language.rs  alert_info.rs  allow.rs  authentication_info.rs  authorization.rs  call_id.rs  call_info.rs  contact.rs  content_disposition.rs  content_encoding.rs  content_language.rs  content_length.rs  content_type.rs  cseq.rs  date.rs  error_info.rs  expires.rs  from.rs  header.rs  in_reply_to.rs  max_fowards.rs  min_expires.rs  mod.rs  priority.rs  proxy_authorization.rs  record_route.rs  reply_to.rs  supported.rs  to.rs  user_agent.rs  via.rs  www_authenticate.rs
voip-rs-sip/src/parser/: mod.rs
voip-rs-sip/src/transaction/: client.rs  manager.rs  server.rs
voip-rs-sip/src/transport/: decode.rs  incoming.rs  mod.rs
voip-rs-sip/src/transport/tcp/: mod.rs
voip-rs-sip/src/ua/: dialog.rs
voip-sdp/: Cargo.toml
voip-sdp/src/: error.rs  lib.rs
voip-sdp/src/msg/: mod.rs
voip-sdp/src/parser/: mod.rs
voip-sdp/src/sdp/: mod.rs
voip-sip/: Cargo.toml
voip-sip/src/: error.rs  lib.rs  macros.rs  test_utils.rs
voip-sip/src/dialog/: mod.rs  ua.rs
voip-sip/src/endpoint/: builder.rs  mod.rs  module.rs  plugin.rs  to_take.rs
voip-sip/src/message/: auth.rs  code.rs  method.rs  mod.rs  param.rs  sip_auth.rs  sip_uri.rs  status_code.rs  uri.rs
voip-sip/src/message/headers/: accept.rs  accept_encoding.rs  accept_language.rs  alert_info.rs  allow.rs  authentication_info.rs  authorization.rs  call_id.rs  call_info.rs  contact.rs  content_disposition.rs  content_encoding.rs  content_language.rs  content_length.rs  content_type.rs  cseq.rs  date.rs  error_info.rs  expires.rs  from.rs  header.rs  in_reply_to.rs  max_fowards.rs  mime_version.rs  min_expires.rs  mod.rs  organization.rs  priority.rs  proxy_authenticate.rs  proxy_authorization.rs  proxy_require.rs  raw_header.rs  record_route.rs  reply_to.rs  require.rs  retry_after.rs  route.rs  server.rs  subject.rs  supported.rs  (+7 more)
voip-sip/src/parser/: mod.rs
voip-sip/src/resolver/: mod.rs
voip-sip/src/transaction/: client.rs  fsm.rs  manager.rs  mod.rs  server.rs
voip-sip/src/transport/: decode.rs  incoming.rs  mod.rs  outgoing.rs  tcp.rs  udp.rs  ws.rs
voip-sip/src/transport/tcp/: mod.rs
voip-sip/src/transport/ws/: mod.rs
voip-sip/src/ua/: mod.rs
voip-sip/src/ua/dialog/: dialog.rs  mod.rs
voip-utils/: Cargo.toml
voip-utils/src/: lib.rs  scanner.rs  to_take.rs
voip/src/: lib.rs
