[workspace]
members = ["voip-sip", "utils", "examples", "voip-sdp", "voip"]
resolver = "2"

[workspace.dependencies]
sip = { path = "voip-sip", package = "voip-sip"}
sdp = { path = "voip-sdp", package = "voip-sdp" }
utils = { path = "utils", package = "utils" }
tokio = { version = "1.41.1", features = [
    "net",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "test-util",
] }
thiserror = "2.0.12"
bytes = "1"
assert_matches = "1.5"

[workspace.package]
edition = "2024"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"


[profile.release-with-debug]
inherits = "release"
opt-level = 2
debug = true
strip = "none"
