[package]
name = "examples"
version = "0.1.0"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "tracing", "signal"] }
tracing = "0.1.41"
tracing-subscriber = {version = "0.3", features = ["env-filter", "chrono"]}
async-trait = "0.1.83"
voip = {path = "../voip"}
chrono = "0.4"

[dependencies.console-subscriber]
version = "0.4.1"
features = ["env-filter"]

[[example]]
name = "sipstateless"
path = "sipstateless.rs"

[[example]]
name = "uas"
path = "uas.rs"

[[example]]
name = "sipecho"
path = "sipecho.rs"



