[package]
name = "utils"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
either = "1.15.0"
local-ip-address = "0.6.3"

[dev-dependencies]
assert_matches.workspace = true